# fastapi_crud

./: .env.example  .gitignore  README.md  docker-compose.yml  fill_db_from_csv.py  init-db.py  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 0a44add821ab_update_players_table.py  443202e1eac2_.py  7df7e5f1fe5d_.py  8dc6534f842c_check_diff.py  9b85d5a0f454_initial_tables.py  a88cff0ee33b_.py  fd383e4ba687_update_players_table.py
app/: db.py  main.py  models.py  schemas.py  settings.py
app/db/: models.py  schemas.py
test-data/: questions.csv
