[project]
name = "fastapi-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]
